[gd_scene load_steps=2 format=3 uid="uid://matchscene123"]

[ext_resource type="Script" path="res://scenes/GridView.gd" id="1_gridview"]
[ext_resource type="Script" path="res://scenes/Match.gd" id="2_match"]

[node name="Match" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_match")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.05, 0.05, 0.05, 1)

[node name="GridView" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_gridview")

[node name="Hand" type="Control" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -300.0
offset_top = -150.0
offset_right = 300.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 20.0
offset_top = 20.0
offset_right = 200.0
offset_bottom = 43.0
text = "Match Scene (Active)"

[node name="ScoreContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -200.0
offset_top = 10.0
offset_right = 200.0
offset_bottom = 50.0
grow_horizontal = 2
theme_override_constants/separation = 100
alignment = 1

[node name="PlayerScore" type="Label" parent="ScoreContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Player: 0"

[node name="AIScore" type="Label" parent="ScoreContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "AI: 0"

[node name="RuleInfo" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -200.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 80.0
grow_horizontal = 0

[node name="TrumpLabel" type="Label" parent="RuleInfo"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.8, 0.2, 1)
text = "Trump: ???"
horizontal_alignment = 2

[node name="AceLabel" type="Label" parent="RuleInfo"]
layout_mode = 2
text = "Ace: ???"
horizontal_alignment = 2

[node name="SmashText" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -100.0
offset_right = 400.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 64
text = "ARCANA FLIPPED!"
horizontal_alignment = 1
vertical_alignment = 1
